# yyctechjobs_cli

./: .travis.yml  Cargo.toml  Readme.md  appveyor.yml
src/: client.rs  main.rs  posts.rs
