[package]
name = "calgary_jobs_cli"
version = "0.1.0"
license = "MIT"
description = "command line utility for searching calgary tech jobs"
homepage = "https://yyctech.dev/"
readme = "Readme.md"
authors = ["Kyle Reczek <contact@yyctech.dev>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
reqwest = "0.9.11"
colored = "1.7"
serde_json = "1.0.39"
serde = { version = "1.0", features = ["derive"]}
